# foolrenderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/cut_fish/: README.md  metallic.tga  roughness.tga
assets/rusted_iron/: README.md
assets/suzanne/: metallic.tga  roughness.tga
assets/test_cube/: test_cube.mtl  test_cube_diffuse.tga
foolrenderer/: color.c  color.h  framebuffer.c  framebuffer.h  graphics.c  graphics.h  main.c  mesh.c  mesh.h  shader_context.c  shader_context.h  texture.c  texture.h
foolrenderer/graphics/: color.c  color.h  framebuffer.c  framebuffer.h  rasterizer.c  rasterizer.h  shader_context.c  shader_context.h  texture.c  texture.h
foolrenderer/math/: math_utility.c  math_utility.h  matrix.c  matrix.h  vector.c  vector.h
foolrenderer/shaders/: basic.c  basic.h  shadow_casting.c  shadow_casting.h  standard.c  standard.h
foolrenderer/utilities/: image.c  image.h  mesh.c  mesh.h
